objects/Grid_ContractHistoryItem__c.object
<CustomObject>
    <fields>
        <fullName>Grid_ContractHistory__c</fullName>
        <label>Contract History</label>
        <referenceTo>Grid_ContractHistory__c</referenceTo>
        <relationshipLabel>Contract History Items</relationshipLabel>
        <relationshipName>Grid_ContractHistoryItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Grid_ContractNameExID__c</fullName>
        <externalId>true</externalId>
        <label>Contract Name ExID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grid_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grid_TotalAmount__c</fullName>
        <formula>Grid_Quantity__c * Grid_UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract History Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Grid_ContractHistory__c</columns>
        <columns>Grid_Product__c</columns>
        <columns>Grid_Quantity__c</columns>
        <columns>Grid_UnitPrice__c</columns>
        <columns>Grid_TotalAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Contract History Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract History Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>